<resources>
    <string name="app_name">TagMo</string>
    <string name="middleCenterError"> </string>
    <string name="topCenterTextMessage">Place the Tag under the Phone</string>
    <string name="nfcIconDescription">NFC Icon</string>
    <string name="movingBarDescription">Moving bar indicating the scanning process</string>
    <string name="shadow_cave_progress">Shadow Cave progress</string>
    <string name="hearts">Hearts</string>
    <string name="edit_tp_data">Edit TP Data</string>
    <string name="editor_error_outofbounds">Amiibo contains an invalid current state.</string>
    <string name="fixed_key_found">Locked key OK.</string>
    <string name="fixed_key_missing">No Locked key!</string>
    <string name="unfixed_key_found">Unfixed key OK.</string>
    <string name="unfixed_key_missing">No Unfixed key!</string>
    <string name="nfc_unsupported">NFC not supported!</string>
    <string name="nfc_disabled">NFC not enabled!</string>
    <string name="nfc_enabled">NFC enabled!</string>

    <string name="settings_import_keys">import_keys</string>
    <string name="settings_import_info">import_info</string>
    <string name="settings_reset_info">reset_info</string>
    <string name="settings_enable_amiibo_browser">enable_amiibo_browser</string>
    <string name="settings_enable_tag_type_validation">enable_tag_type_validation</string>
    <string name="settings_enable_power_tag_support">enable_power_tag_support</string>
    <string name="settings_export_info">settings_export_info</string>
    <string name="settings_info_amiibos">settings_info_amiibos</string>
    <string name="settings_info_game_series">settings_info_game_series</string>
    <string name="settings_info_characters">settings_info_characters</string>
    <string name="settings_info_amiibo_series">settings_info_amiibo_series</string>
    <string name="settings_info_amiibo_types">settings_info_amiibo_types</string>
    <string name="settings_import_info_amiiboapi">settings_sync_info_amiiboapi</string>
    <string name="keys_missing_warning">Amiibo keys not found</string>
    <string name="nfc_enable_action">Enable</string>
    <string name="open_settings_action">Settings</string>
    <string name="edit_ssb_data">Edit SSB Data</string>
    <string name="edit_mii_data">Edit Mii Data</string>
    <string name="image_network_settings">\@string/image_network_settings</string>

    <string name="txtTagId"><b>Tag ID</b></string>
    <string name="txtTagGameSeries"><b>Game Series</b></string>
    <string name="txtTagAmiiboSeries"><b>Amiibo Series</b></string>
    <string name="txtTagAmiiboType"><b>Amiibo Type</b></string>
    <string name="txtTagPath"><b>Path</b></string>
    <string name="amiibo_transition">amiibo_transition</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
