<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:padding="16dp">

    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:foreground="@drawable/card_foreground"
        app:cardCornerRadius="@dimen/card_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/txtError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="ERROR"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textColor="@color/tag_text"
                    android:textSize="16dp"/>

                <RelativeLayout
                    android:id="@+id/amiiboInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imageAmiibo"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_marginBottom="4dp"
                        android:foreground="@drawable/card_foreground" />

                    <View
                        android:id="@+id/imageDivider"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@drawable/bottom_divider"
                        android:layout_below="@id/imageAmiibo"/>

                    <TextView
                        android:id="@+id/txtName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="NAME"
                        android:textColor="@color/tagNameRev"
                        android:background="@color/colorPrimary"
                        android:layout_below="@+id/imageDivider"
                        android:textSize="16dp"/>

                    <LinearLayout
                        android:id="@+id/group1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txtName"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/txtTagIdLabel"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="start"
                            android:text="@string/txtTagId"
                            android:textColor="@color/tag_text"

                            android:textSize="10dp"/>

                        <TextView
                            android:id="@+id/txtTagId"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="start"
                            android:text="TAGID"
                            android:textColor="@color/tag_text"
                            android:textSize="10dp"/>

                        <View
                            android:layout_width="4dp"
                            android:layout_height="1dp"/>


                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/group2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/group1"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/txtTagAmiiboTypeLabel"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="start"
                            android:text="@string/txtTagAmiiboType"
                            android:textColor="@color/tag_text"

                            android:textSize="10dp"/>

                        <TextView
                            android:id="@+id/txtAmiiboType"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="start"
                            android:text="AMIIBO TYPE"
                            android:textColor="@color/tag_text"
                            android:textSize="10dp"/>
                        <View
                            android:layout_width="4dp"
                            android:layout_height="1dp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/group3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/group2"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/txtGameSeriesLabel"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="start"
                            android:text="@string/txtTagGameSeries"
                            android:textColor="@color/tag_text"

                            android:textSize="10dp"/>

                        <TextView
                            android:id="@+id/txtGameSeries"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="start"
                            android:text="GAME SERIES"
                            android:textColor="@color/tag_text"
                            android:textSize="10dp"/>

                        <View
                            android:layout_width="4dp"
                            android:layout_height="1dp"/>



                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/group4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/group3"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/txtAmiiboSeriesLabel"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="start"
                            android:text="@string/txtTagAmiiboSeries"
                            android:textColor="@color/tag_text"

                            android:textSize="10dp"/>
                        <TextView
                            android:id="@+id/txtAmiiboSeries"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="start"
                            android:text="AMIIBO SERIES"
                            android:textColor="@color/tag_text"
                            android:textSize="10dp"/>

                        <View
                            android:layout_width="4dp"
                            android:layout_height="1dp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/group5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/group4"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/txtAmiiboPathLabel"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="start"
                            android:text="@string/txtTagPath"
                            android:textColor="@color/tag_text"
                            android:textSize="10dp"
                            android:visibility="gone"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/group6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/group5"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/txtPath"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="PATH"
                            android:textColor="@color/tag_text"
                            android:textSize="10dp"
                            android:visibility="gone"/>
                    </LinearLayout>

                    <TextView
                        android:id="@+id/txtCharacter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="CHARACTER"
                        android:textColor="@color/tag_text"
                        android:textSize="10dp"
                        android:visibility="gone"/>
                </RelativeLayout>
            </LinearLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:popupTheme="@style/PopupTheme"
                android:theme="@style/PopupThemeOverlay"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>
